syntax = "proto3";
package grpcexample;

option java_package = "com.application.genproto";
option go_package = "./";
option java_multiple_files = true;

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// protoc --proto_path=gRPC/proto --go_out=gRPC/protogen --go_opt=paths=source_relative message.proto
// protoc gRPC/proto/message.proto --go_out=./gRPC/protogen --go-grpc_out=./gRPC/protogen